* Add support for using git instead of subversion as the RCS backend,   tremendous thanks to Recai Oktaş for this. * Doc updates for git.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,11 @@ ikiwiki (1.5) UNRELEASED; urgency=low
     can be useful when using link-based globbing for page categorisation.
   * Remove preprocessor directives from inlined pages.
   * Allow simple preprocessor directive values to be specified w/o quotes.
+  * Add support for using git instead of subversion as the RCS backend,
+    tremendous thanks to Recai Oktaş for this.
+  * Doc updates for git.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  1 Jun 2006 23:47:43 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  2 Jun 2006 01:13:18 -0400
 
 ikiwiki (1.4) unstable; urgency=low
 
