--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -2,7 +2,7 @@
 ikiwiki is a **wiki compiler**. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
-markup language. Instead it uses [[Subversion]] and [[MarkDown]].
+markup language. Instead it uses [[Subversion]] (or [[Git]]) and [[MarkDown]].
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. It's the best way to find out when there's a new version to [[Download]].
 
