--- a/doc/recentchanges.mdwn
+++ b/doc/recentchanges.mdwn
@@ -1,1 +1,3 @@
-ikiwiki generates the list of recent changes by examining the [[Subversion]] commit log. You have to have [[CGI]] set up for this feature to be enabled.
+ikiwiki generates the list of recent changes by examining the
+[[Subversion]] or [[Git]] commit log. You have to have [[CGI]] set up for
+this feature to be enabled.
