--- a/doc/whyikiwiki.mdwn
+++ b/doc/whyikiwiki.mdwn
@@ -3,8 +3,13 @@ this a pretty Iky Wiki, since it's so different from other Wikis. Partly
 because "ikiwiki" is a nice palindrome. Partly because its design turns
 the usual design for a Wiki inside-out and backwards.
 
-(BTW, I'm told that "iki" is Finnish for "forever" so ikiwiki is "forever wiki".)
+(BTW, I'm told that "iki" is Finnish for "forever" so ikiwiki is "forever
+wiki".)
 
-Oh, maybe you wanted to know why you'd want to choose ikiwiki instead of all the other wikis out there? Unless your personal strangeness significantly aligns with [[Joey]]'s, so that keeping everything in subversion, compiling websites to static html, and like design [[features]] appeal to you, you probably won't.
+Oh, maybe you wanted to know why you'd want to choose ikiwiki instead of
+all the other wikis out there? Unless your personal strangeness
+significantly aligns with [[Joey]]'s, so that keeping everything in
+subversion, compiling websites to static html, and like design [[features]]
+appeal to you, you probably won't.
 
 Hmm, the above paragraph is less true today than it was when I wrote it.
