--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -3,7 +3,9 @@ Some of ikiwiki's features:
 * [[Subversion]]
 
   Rather than implement its own system for storing page histories etc,
-  ikiwiki simply uses subversion. (It's also possible to [[plugins/write]] support for other systems.)
+  ikiwiki simply uses subversion. (It's also possible to [[plugins/write]]
+  support for other systems, and ikiwiki also includes support for [[Git]]
+  now.)
 
   Instead of editing pages in a stupid web form, you can use vim and commit
   changes via svn. Or work disconnected using svk and push your changes out
