--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,6 +2,8 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
+Test. &#1055;&#1088;&#1086;&#1074;&#1077;&#1088;&#1082;&#1072;. &#12486;&#12473;&#12488;
+
 Here's a paragraph.
 
 Here's another one with *emphasised* text.
