web commit by LarsChristianHausmann

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -3,4 +3,4 @@ Seems like there should be a page for you to post your thoughts about ikiwiki, b
 Note that for more formal bug reports or todo items, you can also edit the [[bugs]] and  [[todo]] pages.
 
 ----
-
+How about adding ACL? So that you can control which users are allowed to read, write certain pages. The moinmoin wiki has that, and it is something, that I think is very valuable. 
