web commit by DonMarti

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -41,6 +41,12 @@ Bulleted list
 * item
 * just to try this stuff - looks kool!
 
+* one
+  * two
+  * two
+*one
+*one
+
 ----
 
 [[haiku hint="sandbox play"]]
