ikiwiki now in testing

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -7,7 +7,7 @@ The best place to download a tarball of the latest release is from
 
 # Debian package
 
-If using Debian unstable, or soon, testing:
+If using Debian unstable or testing:
 
         apt-get install ikiwiki
 
