web commit by AndreLuisLopes: Added AndreLuisLopes personal website entry

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -11,5 +11,6 @@ This page is to track users of ikiwiki.
 * [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
 * Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/).
+* Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
