--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.5) UNRELEASED; urgency=low
+ikiwiki (1.5) unstable; urgency=low
 
   * Add --timeformat config option to allow changing how dates are displayed.
     Note that as a side effect, dates will now be displayed using the local
@@ -32,7 +32,7 @@ ikiwiki (1.5) UNRELEASED; urgency=low
     utf-8 for edit and other fields, and for recentchanges. There may still
     be utf-8 issues with the preferences page though.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 11 Jun 2006 14:48:41 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 11 Jun 2006 19:56:54 -0400
 
 ikiwiki (1.4) unstable; urgency=low
 
