web commit by joey

--- a/doc/news/version_1.5.mdwn
+++ b/doc/news/version_1.5.mdwn
@@ -1,3 +1,5 @@
+ikiwiki now features support for [[Git]]!
+
 ikiwiki 1.5 released with these changes:
 
    * Add --timeformat config option to allow changing how dates are displayed.
