* YA utf-8 patch from Recai, this time to fix previewing a page so that   the text in the input box is re-encoded back to utf-8.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.6) UNRELEASED; urgency=low
+
+  * YA utf-8 patch from Recai, this time to fix previewing a page so that
+    the text in the input box is re-encoded back to utf-8.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 14 Jun 2006 23:38:40 -0400
+
 ikiwiki (1.5) unstable; urgency=low
 
   * Add --timeformat config option to allow changing how dates are displayed.
