* New SVG logo from Recai.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,9 @@ ikiwiki (1.6) UNRELEASED; urgency=low
       for the content.
     - Add 'use encoding "utf8"' to CGI.pm to avoid warnings about wide
       character in print.
+  * New SVG logo from Recai.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 16 Jun 2006 21:35:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 17:18:23 -0400
 
 ikiwiki (1.5) unstable; urgency=low
 
