--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -6,9 +6,16 @@ Anyway, if you have this logo in other fonts or colors, feel free to send
 it to [[Joey]] for inclusion here. (Or upload it, once that feature is
 added).
 
-[[ikiwiki_logo|ikiwiki.png]] 
+* [[ikiwiki_logo|ikiwiki.png]]  
+  [[ikiwiki_logo_large|ikiwiki_large.png]]
 
-LaTeX source to an image approximating the above:
+  [[SVG_source|ikiwiki.svgz]]
+
+  Contributed by Recai Oktaş
+
+* [[ikiwiki_logo|ikiwiki_old.png]] 
+
+  LaTeX source to an image approximating the above:
 
 	\documentclass{article}
 	\usepackage{graphicx}
@@ -17,4 +24,4 @@ LaTeX source to an image approximating the above:
 	\huge\reflectbox{iki}wiki
 	\end{document}
 
-Contributed by [[JeroenSchot]]
+  Contributed by [[JeroenSchot]]
