--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -9,7 +9,9 @@ added).
 * [[ikiwiki_logo|ikiwiki.png]]  
   [[ikiwiki_logo_large|ikiwiki_large.png]]
 
-  [[SVG_source|ikiwiki.svgz]]
+  [[SVG_source|ikiwiki.svgz]], can be used to generate a logo at any size
+  with a command like:
+  `inkscape -z -D -w 90 -e ikiwiki.png ikiwiki.svgz`
 
   Contributed by Recai Oktaş
 
