--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -18,6 +18,6 @@ Released 29 April 2006.
 * Should have fully working [[todo/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
-* A version of the logo in a different font, possibly with the dots on the i's highlighted in some other color.
+* Improved [[logo]].
 * Support for at least one RCS aside from svn. Once it supports two, it should quickly grow to support them all.. See [[about_rcs_backends]]
 * Support for one other markup language, probably restructured text.
