--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.6) UNRELEASED; urgency=low
+ikiwiki (1.6) unstable; urgency=low
 
   * YA utf-8 patch from Recai, this time to fix previewing a page so that
     the text in the input box is re-encoded back to utf-8.
@@ -27,7 +27,7 @@ ikiwiki (1.6) UNRELEASED; urgency=low
       character in print.
   * New SVG logo from Recai.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 17:18:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 19:18:46 -0400
 
 ikiwiki (1.5) unstable; urgency=low
 
