--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.7) UNRELEASED; urgency=low
+
+  * Updated logo from Recai with some kerning and alingment tuning.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 19:39:36 -0400
+
 ikiwiki (1.6) unstable; urgency=low
 
   * YA utf-8 patch from Recai, this time to fix previewing a page so that
