--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 ikiwiki (1.7) UNRELEASED; urgency=low
 
   * Updated logo from Recai with some kerning and alingment tuning.
+  * Patch from Recai to fix git recentchanges code to work with git 1.4 which
+    changed some output.
+  * Copyright update.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 19:39:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Jun 2006 23:30:49 -0400
 
 ikiwiki (1.6) unstable; urgency=low
 
