--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -4,4 +4,5 @@ feed.
 
 [[inline pages="news/* !*/Discussion" rootpage="news" show="30"]]
 
-By the way, some other pages with RSS feeds about ikiwiki include [[plugins]], [[TODO]] and [[TODO/done]].
+By the way, some other pages with RSS feeds about ikiwiki include
+[[plugins]], [[TODO]] and [[bugs]].
