--- a/doc/todo/mailnotification.mdwn
+++ b/doc/todo/mailnotification.mdwn
@@ -56,4 +56,4 @@ should be safe. --[[WillThompson]])
   I'm deferring these nicities until there's some demonstrated demand
   --[[Joey]].
 
-[[done]]
+[[todo/done]]
