--- a/doc/todo/upgradehooks.mdwn
+++ b/doc/todo/upgradehooks.mdwn
@@ -5,4 +5,4 @@ this.
 Let there be an /etc/ikiwiki/wikis, which just lists setup files and the
 user who owns them. postinst loops through, su's, and runs --setup. Voila!
 
-[[done]]
+[[todo/done]]
