--- a/doc/todo/done.mdwn
+++ b/doc/todo/done.mdwn
@@ -1,3 +1,3 @@
 recently fixed [[TODO]] items
 
-[[inline pages="link(done) !*/Discussion" show="10"]]
+[[inline pages="link(todo/done) !todo !*/Discussion" show="10"]]
