--- a/doc/todo/logo.mdwn
+++ b/doc/todo/logo.mdwn
@@ -1,4 +1,4 @@
 ikiwiki needs a logo. I'm thinking something simple like the word "ikiwiki"
 with the first "k" backwards; drawn to show that it's "wiki" reflected.
 
-[[done]]
+[[todo/done]]
