--- a/doc/todo/underlay.mdwn
+++ b/doc/todo/underlay.mdwn
@@ -10,4 +10,4 @@ one from the underlaydir. -- Fixed by scanning srcdir first, then
 underlaydir, and refusing to add any files from underlaydir if they also
 exist in the srcdir. However, see [[security]] for caveats.
 
-[[done]]
+[[todo/done]]
