* Fix orphans plugin to not count a link to a nonexistant page as a reason   for a page not being an orphan.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.8) UNRELEASED; urgency=low
+
+  * Fix orphans plugin to not count a link to a nonexistant page as a reason
+    for a page not being an orphan.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 25 Jun 2006 03:20:48 -0400
+
 ikiwiki (1.7) unstable; urgency=low
 
   * Updated logo from Recai with some kerning and alingment tuning.
