--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -8,7 +8,7 @@ markup language. Instead it can use [[Subversion]] (or [[Git]]) and [[MarkDown]]
 
 * See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]] and [[bugs]] might also be of interest. Feel free to post your thoughts about ikiwiki to [[Discussion]].
 
-* [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program. If you use ikiwiki, please add your wiki to [[IkiWikiUsers]].
+* [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents the parameters and usage of the ikiwiki program. If you use ikiwiki, please add your wiki to [[IkiWikiUsers]].
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
