--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ ikiwiki (1.8) UNRELEASED; urgency=low
 
   * Fix orphans plugin to not count a link to a nonexistant page as a reason
     for a page not being an orphan.
+  * Support pinging services such as Technorati using XML-RPC to notify them
+    about changes to rss feeds.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 25 Jun 2006 03:20:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Jun 2006 20:41:45 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
