web commit by AlesandroDottiContra

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -12,6 +12,6 @@ This page is to track users of ikiwiki.
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
 * Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/).
 * Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
-* Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra/org/blog).
+* Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
