* Honor LC_CTIME when formatting a time for display. Thanks, Faidon   Liambotis.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     for a page not being an orphan.
   * Support pinging services such as Technorati using XML-RPC to notify them
     about changes to rss feeds.
+  * Honor LC_CTIME when formatting a time for display. Thanks, Faidon
+    Liambotis.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 26 Jun 2006 20:41:45 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat,  1 Jul 2006 20:28:26 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
