--- a/doc/bugs/utf8_svn_log.mdwn
+++ b/doc/bugs/utf8_svn_log.mdwn
@@ -7,3 +7,5 @@ have that locale.
 Seems that the right fix for this is to use svn log --xml, which is
 always utf-8 and come up with a parser for that. Also fixes the spoofing
 issue in [[security]].
+
+[[bugs/done]]
