web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -21,7 +21,7 @@ this would be to limit web commits to those done by a certian user.
 ## other stuff to look at
 
 I need to audit the git backend a bit, and have been meaning to
-see if any CRLF injection type things can be done.
+see if any CRLF injection type things can be done in the CGI code.
 
 ----
 
