--- a/debian/changelog
+++ b/debian/changelog
@@ -4,12 +4,22 @@ ikiwiki (1.8) UNRELEASED; urgency=low
     for a page not being an orphan.
   * Support pinging services such as Technorati using XML-RPC to notify them
     about changes to rss feeds.
-  * Honor LC_CTIME when formatting a time for display. Thanks, Faidon
-    Liambotis.
   * Parse svn log as xml for improved utf8 and security. Note that this makes
     ikiwiki depend on XML::Simple. Patch by Faidon Liambotis.
+  * POSIX::strftime doesn't know about encodings and doesn't return a utf8
+    flagged string even if the locale causes it to generate utf8 output,
+    so make sure to let perl know it should be handled as utf8. Also, 
+    the optimised version used for standard time formats won't work if the
+    user has changed locale, so drop it. Thanks, Faidon Liambotis.
+  * Fix re-encoding of the comments field to utf8 if a commit fails
+    due to a conflict. Thanks, Faidon Liambotis.
+  * Let svn know that commits have utf8 commit messages. Thanks, Faidon
+    Liambotis.
+  * Add insane double encode/decode to utf8 around call to markdown.
+    This works around a truely strange bug, which is apparently a bug in
+    perl, which I lack space to describe here (see t/crazy-badass-perl-bug.t)
 
- -- Joey Hess <joeyh@debian.org>  Sat,  1 Jul 2006 20:41:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat,  1 Jul 2006 23:25:44 -0400
 
 ikiwiki (1.7) unstable; urgency=low
 
